--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       python: 3.8
     commands:
       - echo Installing dependencies...
-      - python -m pip install --upgrade pip setuptools wheel
+      #- python -m pip install --upgrade pip setuptools wheel
       - pip install -r requirements.txt
   pre_build:
     commands:
